--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ana-os-mo/protractor-workshop-2018#readme",
   "dependencies": {
+    "jasmine-spec-reporter": "^7.0.0",
     "protractor": "^7.0.0"
   },
   "devDependencies": {
